<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--   Create a res->bools.xml file and create a boolean for this default value -->
    <!-- Update these values to be values from resource files and not hard coded -->

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_bass_default"
        android:key="@string/pref_show_bass_key"
        android:summaryOff="@string/pref_summary_off"
        android:summaryOn="@string/pref_summary_on"
        android:title="@string/pref_show_bass_label" />
		
		  <!--  Add two more checkboxes for the treble and mid-range -->
    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_mid_default"
        android:key="@string/pref_show_mid_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_mid_label" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_treble_default"
        android:key="@string/pref_show_treble_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_treble_label" />
		
		 <!--  Add a list preference -->
    <ListPreference
        android:defaultValue="@string/pref_color_red_value"
        android:key="@string/pref_color_key"
        android:title="@string/pref_color_label"
        android:entries="@array/pref_color_option_labels"
        android:entryValues="@array/pref_color_option_values"/>
</PreferenceScreen>